# VoiceTyping

./: .gitignore  LICENSE  README.md  VoiceTyping.spec  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DEMO.md
installer/: VoiceTyping.iss
scripts/: build.ps1  demo_inject.py  demo_pipeline.py  demo_record.py  demo_transcribe.py  download_model.py  generate_icon.py
src/voicetyping/: __init__.py  __main__.py  main.py  pipeline.py
src/voicetyping/audio/: __init__.py  devices.py  levels.py  recorder.py
src/voicetyping/config/: __init__.py  settings.py
src/voicetyping/history/: __init__.py  store.py
src/voicetyping/hotkey/: __init__.py  listener.py  utils.py
src/voicetyping/output/: __init__.py  base.py  windows.py
src/voicetyping/stt/: __init__.py  whisper_engine.py
src/voicetyping/text/: __init__.py  chinese.py
src/voicetyping/ui/: __init__.py  history_window.py  hotkey_dialog.py  mic_dialog.py  recording_indicator.py  tray.py
tests/: test_audio_levels.py  test_core.py  test_devices_and_search.py  test_history.py  test_hotkey.py
