[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetyping"
version = "0.1.0"
description = "Local voice input method for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.scripts]
voicetyping = "voicetyping.main:main"

[tool.setuptools.packages.find]
where = ["src"]
